--- a/DependencyAnalyzer/index.html
+++ b/DependencyAnalyzer/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Dependency Analyzer</title>
 </head>
 <body>
+    <table id="dependencyTable"></table>
 
+    <script src="script.js"></script>
+    <noscript>Cannot run script.</noscript>
 </body>
 </html>
