--- a/DependencyAnalyzer/index.html
+++ b/DependencyAnalyzer/index.html
@@ -7,7 +7,7 @@
 <body>
     <table id="dependencyTable"></table>
 
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
     <noscript>Cannot run script.</noscript>
 </body>
 </html>
